src/test/ui/chalkify/type_inference.stderr
error[E0277]: the trait bound `{float}: Bar` is not satisfied
  --> $DIR/type_inference.rs:27:14
   |
LL |     only_bar(x);
   |     -------- ^ the trait `Bar` is not implemented for `{float}`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the following implementations were found:
             <i32 as Bar>
             <u32 as Bar>
note: required by a bound in `only_bar`
  --> $DIR/type_inference.rs:12:16
   |
LL | fn only_bar<T: Bar>(_x: T) { }
   |                ^^^ required by this bound in `only_bar`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
